--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "social-network-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Social Network API",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yoyachi/social-network-api.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Julissa Hash",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/yoyachi/social-network-api/issues"
   },
   "homepage": "https://github.com/yoyachi/social-network-api#readme",
   "dependencies": {
-    "mongodb": "^3.6.6"
+    "dateformat": "^4.5.1",
+    "express": "^4.17.1",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.5"
   }
 }
